--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
     <string name="app_name">CarWaleCovidTracker</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sort">Sort</string>
+    <string name="filter">Filter</string>
+    <string-array name="sort_list_field">
+        <item>Country</item>
+        <item>Total Cases</item>
+        <item>Deaths</item>
+        <item>Recovered</item>
+    </string-array>
+
+    <string-array name="sort_list_type">
+        <item>Ascending</item>
+        <item>Descending</item>
+    </string-array>
+
+    <string-array name="raneg_type">
+        <item> &gt; </item>
+        <item> &lt; </item>
+    </string-array>
+
 </resources>
