--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sort">Sort</string>
     <string name="filter">Filter</string>
+
     <string-array name="sort_list_field">
         <item>Country</item>
         <item>Total Cases</item>
@@ -18,8 +19,18 @@
     </string-array>
 
     <string-array name="raneg_type">
-        <item> &gt; </item>
-        <item> &lt; </item>
+        <item>&gt;=</item>
+        <item>&lt;</item>
     </string-array>
+
+    <string-array name="filter_list">
+        <item>Total Cases</item>
+        <item>Deaths</item>
+        <item>Recovered</item>
+    </string-array>
+
+    <string name="total_confirmed">Total Confirmed\n%1$s</string>
+    <string name="total_deaths">Total Deaths\n%1$s</string>
+    <string name="total_recovered">Total Recovered\n%1$s</string>
 
 </resources>
